--- a/HomeWorkLesson2.7/StoryBoards/Base.lproj/Main.storyboard
+++ b/HomeWorkLesson2.7/StoryBoards/Base.lproj/Main.storyboard
@@ -106,6 +106,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Contact List" id="CZX-2a-FMg"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PiI-mB-92P">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
