--- a/HomeWorkLesson2.7/StoryBoards/Base.lproj/Main.storyboard
+++ b/HomeWorkLesson2.7/StoryBoards/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contactList" id="qqJ-dD-45e">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="qqJ-dD-45e">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qqJ-dD-45e" id="xMO-aw-dW7">
@@ -102,7 +102,7 @@
         <!--Contact List-->
         <scene sceneID="3x4-Ew-PuC">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="lNZ-mW-dNX" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="lNZ-mW-dNX" customClass="TabBarViewController" customModule="HomeWorkLesson2_7" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Contact List" id="CZX-2a-FMg"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PiI-mB-92P">
@@ -122,7 +122,7 @@
         <!--Info-->
         <scene sceneID="KDP-6i-g41">
             <objects>
-                <tableViewController id="ZEx-Tc-s6z" sceneMemberID="viewController">
+                <tableViewController id="ZEx-Tc-s6z" customClass="InfoListViewController" customModule="HomeWorkLesson2_7" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="M9O-kO-6GS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
